# z-stackr

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
apps/stacker-cli/: Cargo.toml  README.md
apps/stacker-cli/src/: args.rs  batch.rs  lib.rs  main.rs  pipeline.rs
apps/stacker-cli/src/pipeline/: align.rs  fuse.rs  load.rs  mod.rs  output.rs
apps/stacker-cli/tests/: args_test.rs  e2e_test.rs
apps/stacker-gui/: Cargo.toml  README.md  build.rs
apps/stacker-gui/src/: align_cache.rs  app.rs  image_utils.rs  lib.rs  main.rs  mem_estimate.rs  nn_bridge.rs  project.rs  retouch.rs  save.rs  settings.rs  sort_cull.rs  stack_pipeline.rs  stacking.rs  ui_helpers.rs
apps/stacker-gui/src/callbacks/: alignment.rs  files.rs  mod.rs  models.rs  project.rs  retouch_window.rs  saving.rs  settings_ui.rs  stacking.rs
apps/stacker-gui/tests/: sort_cull_test.rs
apps/stacker-gui/ui/: app.slint
crates/stacker-algo/: Cargo.toml  README.md
crates/stacker-algo/benches/: apex_fusion.rs
crates/stacker-algo/src/: lib.rs  optimize.rs
crates/stacker-algo/src/apex/: fuse.rs  pyramid.rs
crates/stacker-algo/src/apex/gpu/: accumulate.wgsl  accumulator.rs  fuse.wgsl  mod.rs
crates/stacker-algo/src/hybrid/: retouch.rs
crates/stacker-algo/src/relief/: focus.rs  fuse.rs  guided.rs  multigrid.rs  pyramid.rs  threshold.rs
crates/stacker-algo/src/relief/gpu/: box_filter.wgsl  elementwise.wgsl  mod.rs  relax.wgsl
crates/stacker-algo/src/strata/: mod.rs  saliency.rs
crates/stacker-algo/src/strata/gpu/: mod.rs  saliency.wgsl
crates/stacker-algo/tests/: apex_fuse.rs  fix_clippy.rs  fix_fmt.rs  gpu_apex_accumulator_parity.rs  gpu_fuse_parity.rs  gpu_relief_parity.rs  gpu_strata_parity.rs  optimize.rs  strata_test.rs  timing.rs
crates/stacker-algo/tests/apex/: pyramid.rs
crates/stacker-algo/tests/hybrid/: retouch.rs
crates/stacker-algo/tests/relief/: focus.rs  fuse.rs  guided.rs  threshold.rs
crates/stacker-align/: Cargo.toml  README.md
crates/stacker-align/src/: akaze_match.rs  brightness.rs  lib.rs
crates/stacker-align/src/pipeline/: align.rs  mod.rs  refinement.rs  seed.rs
crates/stacker-align/src/ransac/: alignment.rs  breathing.rs  mod.rs  utils.rs
crates/stacker-align/src/refine/: core.rs  lucas_kanade.rs  mod.rs  params.rs  pyramid.rs  simplex.rs
crates/stacker-align/src/transform/: crop.rs  mod.rs  resize.rs  warp.rs
crates/stacker-align/src/transform/gpu/: mod.rs  warp.wgsl
crates/stacker-align/tests/: akaze_match.rs  align_sample_test.rs  gpu_warp_parity.rs  lucas_kanade_test.rs  ransac.rs  ransac_test.rs  refine.rs  transform_test.rs
crates/stacker-core/: Cargo.toml  README.md
crates/stacker-core/src/: color.rs  error.rs  gpu.rs  image.rs  io.rs  lib.rs  memory.rs  metadata.rs  preprocessing.rs  settings.rs  telemetry.rs
crates/stacker-core/tests/: color.rs  error.rs  image.rs  memory.rs  settings.rs  telemetry.rs
crates/stacker-nn/: Cargo.toml  README.md
crates/stacker-nn/src/: bridge.rs  discovery.rs  infer.rs  lib.rs  runtime.rs  train.rs  traits.rs  warp.rs
crates/stacker-nn/src/data/: mod.rs  tests.rs
crates/stacker-nn/src/loss/: corner_alignment.rs  focus_batch.rs  focus_fusion.rs  helpers.rs  mod.rs  pair_corner_alignment.rs  photometric.rs
crates/stacker-nn/src/model/: batch_align.rs  batch_merge.rs  blocks.rs  focus_merge.rs  fusion_align.rs  mod.rs  size.rs
crates/stacker-nn/tests/: bridge.rs  discovery.rs  infer.rs  loss.rs  model.rs  train.rs  traits.rs
crates/stacker-nn/tests/data/: mod.rs
crates/stacker-pipeline/: Cargo.toml  README.md
crates/stacker-pipeline/src/: align.rs  cache.rs  fuse.rs  lib.rs  load.rs  output.rs
crates/stacker-pipeline/tests/: lib.rs  output.rs
crates/stacker-python/: Cargo.toml  README.md  pyproject.toml
crates/stacker-python/src/: array_api.rs  converter.rs  file_api.rs  lib.rs  progress.rs  settings.rs
crates/stacker-python/tests/: converter.rs  lib.rs
docs/: vscode-tasks.json
scripts/: 01_estimate_depth.py  02_blender_focus_stack.py  03_simulate_misalignment.py  04_eval_alignment.py
